# cardano-cls

./: Contributing.md  README.md  cabal.project  flake.nix  hie.yaml  security.md
.github/workflows/: haskell-ci.yml  nix.yaml
doc/: ledger-state-structure.md
doc/adr/: 0001-record-architecture-decisions.md  0002-use-binary-for-working-with-serialization-values.md  0003-move-to-raw-mempack-use-instead-of-binary.md
mempack-scls/: mempack-scls.cabal
mempack-scls/mempack-1.0/Data/MemPack/: Extra.hs
mempack-scls/mempack-2.0/Data/MemPack/: Extra.hs
mempack-scls/src/Data/MemPack/: ByteOrdered.hs
merkle-tree-incremental/: merkle-tree-incremental.cabal
merkle-tree-incremental/src/Crypto/Hash/MerkleTree/: Incremental.hs
merkle-tree-incremental/src/Crypto/Hash/MerkleTree/Incremental/: Internal.hs
merkle-tree-incremental/test/: Reference.hs  Spec.hs
nix/: project.nix  verify-scls.nix
nix/pkgs/: default.nix  update-reference.nix  validate-scls-test.nix  validate-scls.nix  verify-scls.nix
scls-cardano/: scls-cardano.cabal
scls-cardano/cddl-src/Cardano/SCLS/: CDDL.hs  Common.hs  NamespaceSymbol.hs
scls-cardano/cddl-src/Cardano/SCLS/Namespace/: Accounts.hs  EntitiesAccounts.hs  EntitiesCommittee.hs  EntitiesDReps.hs  EntitiesDormantEpochs.hs  EntitiesStakePools.hs  EntitiesStakePoolsFutureParams.hs  EntitiesStakePoolsVRFKeyHashes.hs  GovCommittee.hs  GovConstitution.hs  GovPParams.hs  GovProposals.hs  GovProposalsRoots.hs  Nonces.hs  Snapshots.hs  UTxO.hs
scls-cardano/cddl-validate/Cardano/SCLS/CDDL/: Validate.hs
scls-cardano/gen-cddl/: Main.hs
scls-cardano/test/: Conformance.hs  Main.hs  Reference.hs
scls-cardano/testlib/Cardano/SCLS/: Testlib.hs
scls-cbor/: scls-cbor.cabal
scls-cbor/src/Cardano/SCLS/CBOR/Canonical/: Decoder.hs  Encoder.hs
scls-cbor/test/: CanonicalSpec.hs
scls-core/: scls-core.cabal
scls-core/src/Cardano/SCLS/: NamespaceSymbol.hs
scls-format/: scls-format.cabal
scls-format/src/Cardano/SCLS/Internal/: Hash.hs  Reader.hs
scls-format/src/Cardano/SCLS/Internal/Entry/: ChunkEntry.hs
scls-format/src/Cardano/SCLS/Internal/Record/: Chunk.hs  Hdr.hs  Manifest.hs  Metadata.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/: Dump.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/Builder/: InMemory.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/ChunksBuilder/: InMemory.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/Dump/: Plan.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/MetadataBuilder/: InMemory.hs
scls-format/src/Cardano/SCLS/Internal/Serializer/Reference/: Impl.hs
scls-format/test/: ChunksBuilderSpec.hs  MultiNamespace.hs  NamespacedEncodingSpec.hs  QuerySpec.hs  Roundtrip.hs  TestEntry.hs
scls-util/: scls-util.cabal
scls-util/app/: Main.hs
scls-util/src/Cardano/SCLS/Util/: Checksum.hs  Debug.hs  Diff.hs  File.hs  Info.hs  Tool.hs  Verify.hs
scls-util/src/Cardano/SCLS/Util/Diff/: Entry.hs  Pretty.hs  TermDiff.hs
scls-util/src/Cardano/SCLS/Util/File/: Info.hs  Tool.hs
scls-util/test/: ChecksumSpec.hs  Common.hs  DebugSpec.hs  DiffSpec.hs  InfoSpec.hs  Main.hs  MergeSpec.hs  SplitSpec.hs  TermDiffSpec.hs  VerifySpec.hs
scripts/: validate-file.sh  verify.py
