cabal-version: 3.4
name: scls-util
version: 0.1.0.0
synopsis: Utilities for interacting with SCLS files
description:
  A collection of command-line utilities for working with SCLS files.

license: Apache-2.0
license-file: LICENSE
author: Tweag IO Team <cardano-cls@tweag.io>
copyright: 2025 (c) Modus Create, Inc.
category: Codec
build-type: Simple

common warnings
  ghc-options: -Wall

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
    Cardano.SCLS.Util.Check
    Cardano.SCLS.Util.Checksum
    Cardano.SCLS.Util.Debug
    Cardano.SCLS.Util.Info
    Cardano.SCLS.Util.Result
    Cardano.SCLS.Util.Tool

  build-depends:
    FailT,
    base >=4.18 && <5,
    base16-bytestring,
    bytestring,
    cborg,
    containers,
    crypton,
    cuddle,
    directory,
    filepath,
    mempack-scls,
    merkle-tree-incremental,
    prettyprinter,
    random >=1.2,
    scls-cardano,
    scls-cbor,
    scls-core,
    scls-format,
    streaming,
    text,
    transformers,

  default-language: GHC2021

executable scls-util
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    bytestring,
    containers,
    crypton,
    merkle-tree-incremental,
    optparse-applicative,
    scls-format,
    scls-util,
    streaming,
    text,

  default-language: GHC2021

test-suite scls-util-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    CheckSpec
    ChecksumSpec
    Common
    InfoSpec
    MergeSpec
    SplitSpec

  build-depends:
    base >=4.18 && <5,
    bytestring,
    containers,
    crypton,
    directory,
    filepath,
    hspec,
    hspec-expectations,
    mempack-scls,
    merkle-tree-incremental,
    process,
    scls-format,
    streaming,
    temporary,
    text,
