cabal-version: 3.4
name: scls-util
version: 0.1.0.0
synopsis: Utilities for interacting with SCLS files
description:
  A collection of command-line utilities for working with SCLS files.

license: Apache-2.0
license-file: LICENSE
author: Tweag IO Team <cardano-cls@tweag.io>
copyright: 2025 (c) Modus Create, Inc.
category: Codec
build-type: Simple
tested-with: ghc ==9.14.1 || ==9.12.1 || ==9.10.2

common warnings
  ghc-options:
    -Wall
    -Werror=unused-packages

library
  import: warnings
  hs-source-dirs: src
  exposed-modules:
    Cardano.SCLS.Util.Checksum
    Cardano.SCLS.Util.Debug
    Cardano.SCLS.Util.Diff
    Cardano.SCLS.Util.Diff.Entry
    Cardano.SCLS.Util.Diff.Pretty
    Cardano.SCLS.Util.Diff.TermDiff
    Cardano.SCLS.Util.File
    Cardano.SCLS.Util.File.Info
    Cardano.SCLS.Util.File.Tool
    Cardano.SCLS.Util.Info
    Cardano.SCLS.Util.Result
    Cardano.SCLS.Util.Verify

  build-depends:
    base >=4.18 && <5,
    base16-bytestring,
    bytestring,
    cborg,
    containers,
    crypton,
    cuddle,
    directory,
    filepath,
    mempack-scls,
    merkle-tree-incremental,
    monad-logger,
    prettyprinter,
    prettyprinter-ansi-terminal,
    random >=1.2,
    resourcet,
    scls-cardano,
    scls-cardano:validate,
    scls-cbor,
    scls-core,
    scls-format,
    streaming,
    text,
    tree-diff,

  default-language: GHC2021

executable scls-util
  import: warnings
  hs-source-dirs: app
  main-is: Main.hs
  build-depends:
    base >=4.18 && <5,
    exceptions,
    monad-logger,
    optparse-applicative,
    resourcet,
    scls-format,
    scls-util,
    text,

  default-language: GHC2021

test-suite scls-util-test
  import: warnings
  default-language: GHC2021
  type: exitcode-stdio-1.0
  hs-source-dirs: test
  main-is: Main.hs
  other-modules:
    ChecksumSpec
    Common
    DiffSpec
    InfoSpec
    MergeSpec
    SplitSpec
    TermDiffSpec
    VerifySpec

  build-depends:
    base >=4.18 && <5,
    base16-bytestring,
    bytestring,
    cborg,
    containers,
    directory,
    filepath,
    hspec,
    hspec-expectations,
    mempack-scls,
    process,
    resourcet,
    scls-cardano,
    scls-cbor,
    scls-core,
    scls-format,
    scls-util,
    streaming,
    temporary,
    text,
